[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalie Gavrilova",email = "natali23natali26-tech@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.11.0"
isort = "^7.0.0"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | __pycache__
)/
'''

# Конфигурация isort
[tool.isort]
line_length = 119
profile = "black"
multi_line_output = 3  # Vertical hanging indent
combine_as_imports = true
force_sort_within_sections = true
force_grid_wrap = 0
use_parentheses = true

# Конфигурация mypy
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv",
]

[tool.flake8]
max-line-length = 119
exclude = [
    ".git",
    "__pycache__"
]
